--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "css-transition": "0.0.3",
     "joi-browser": "^13.4.0",
     "jwt-decode": "^3.1.2",
+    "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-bootstrap-icons": "^1.5.0",
