--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.5.0",
     "css-transition": "0.0.3",
+    "fullcalendar": "^5.9.0",
     "joi-browser": "^13.4.0",
     "jwt-decode": "^3.1.2",
     "query-string": "^7.0.0",
