--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
